--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,7 +3,7 @@
 
 # Server Configuration
 NODE_ENV=development
-PORT=5000
+PORT=3001
 
 # MongoDB Connection
 MONGODB_URI=mongodb://localhost:27017/cfa_database
@@ -11,6 +11,7 @@ MONGODB_URI=mongodb://localhost:27017/cfa_database
 # JWT Configuration
 JWT_SECRET=your_super_secret_jwt_key_change_in_production
 JWT_EXPIRE=7d
+JWT_COOKIE_EXPIRE=7
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:3000
@@ -18,3 +19,38 @@ CORS_ORIGIN=http://localhost:3000
 # File Upload Configuration
 MAX_FILE_SIZE=10485760
 UPLOAD_PATH=./uploads
+
+# Email Configuration (for alert notifications)
+# If using Gmail, enable "Less secure app access" or use App Passwords
+EMAIL_SERVICE=gmail
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USERNAME=your_email@gmail.com
+EMAIL_PASSWORD=your_email_password_or_app_password
+EMAIL_FROM=noreply@cfa-energy.com
+
+# Rate Limiting Configuration
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# Alert Checker Cron Schedule (default: hourly)
+# Format: minute hour day month weekday
+# Examples:
+# Every hour: 0 * * * *
+# Every 30 minutes: */30 * * * *
+# Every day at midnight: 0 0 * * *
+ALERT_CRON_SCHEDULE=0 * * * *
+
+# Cost Calculator Configuration
+DEFAULT_ELECTRICITY_RATE=0.12
+PEAK_RATE_MULTIPLIER=1.5
+OFF_PEAK_RATE_MULTIPLIER=0.7
+
+# PDF Generator Configuration
+REPORTS_DIR=./reports
+COMPANY_NAME=CFA Energy Monitoring
+COMPANY_LOGO_PATH=./assets/logo.png
+
+# Logging Configuration
+LOG_LEVEL=info
+LOG_FILE=./logs/app.log
