--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.22.1",
+    "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.1",
     "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.3",
