--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "seed": "node seedDatabase.js",
+    "seed:clear": "node seedDatabase.js --clear",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
